[Glitch] Fix very wide images overflowing posts horizontally
Port dde6c28e97ebc697a03d744d78d8822f85cbd6e8 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/mastodon/components.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon/components.scss
@@ -7551,6 +7551,7 @@ img.modal-warning {
   border-radius: 8px;
   position: relative;
   width: 100%;
+  max-width: 100%;
   min-height: 64px;
   display: grid;
   grid-template-columns: 1fr 1fr;
